[package]
name = "blog_os"
version = "0.1.0"
authors = ["sleyva"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300          # (in seconds)

[dependencies]
bootloader = "0.6.0"
volatile = "0.2.6"
spin = "0.5.0"
x86_64 = "0.7.0"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.3.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[[test]]
name = "panic_handler"
harness = false

[[test]]
name = "stack_overflow"
harness = false
